--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@
 
         .result-box {
             background-color: #7986ac;
-            height: 150px;
+            /* height: 150px; */
             border-radius: 5px;
             color: #fff;
             padding: 10px;
@@ -170,4 +170,13 @@
         .result-info {
             font-size: 12px;
             opacity: 0.9;
+        }
+
+        .result-image {
+            width: 100%;          
+            height: 90px;         
+            object-fit: cover;    
+            border-radius: 4px;
+            margin-top: 8px;      
+            display: block;
         }
